# kubernetes-maintenance-mode

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  GUIDE.md  LICENSE  README.md  app.py  app_complex_backup.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: lint.yml
deploy/: kind-cluster.yaml  local-deploy.ps1  local-deploy.sh
docs/: ACTIVE_USER_TRACKING.md  DEMO_TOMCAT_AND_K8S.md  GITHUB_SETUP.md  LOCAL_DEPLOYMENT.md  MAINTENANCE_DEMO.md  PROBES.md  PROBE_COMPARISON.md  PROJECT_STRUCTURE.md  QUICKSTART.md  TROUBLESHOOTING.md
java-tomcat-demo/: Dockerfile  README.md  pom.xml
java-tomcat-demo/src/main/java/com/example/filter/: MaintenanceFilter.java
java-tomcat-demo/src/main/java/com/example/servlet/: AdminStatusServlet.java  StatusServlet.java
java-tomcat-demo/src/main/webapp/: maintenance.html
java-tomcat-demo/src/main/webapp/WEB-INF/: web.xml
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  maintenance-page-deployment.yaml  redis-deployment.yaml  service.yaml
kubernetes/maintenance-page/: index.html
openshift/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  route-admin.yaml  route-normal.yaml  route.yaml  service.yaml
scripts/: README.md  demo-real-user-access.ps1  deploy-maintenance-page.ps1  deploy-update.ps1  deploy.ps1  deploy.sh  disable-maintenance.ps1  disable-maintenance.sh  enable-maintenance.ps1  enable-maintenance.sh  runme.ps1  teardown.ps1  test-all-buttons.ps1  test-endpoints.ps1
